# kamilimu-demo

./: .gitignore  pyproject.toml
eda_ml/: board_game_eda.py
eda_ml/data/: data_dict.md
src/: api.py
src/ml_models/: our_model.kamilimu  scaler.kamilimu
src/operations/: example.py
src/schemas/: __init__.py  bg.py
